--- a/3.html
+++ b/3.html
@@ -1,32 +1,79 @@
 <!doctype html>
+
 <html>
+
 <head>
+
   <title>브이지연</title>
+
 <meta charset="utf-8">
+
+
+<link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-  <h1><a href="index.html">지연이의 다양한 얼굴</a></h1></a>
-<ol>
-  <li> <a href="1.html">지연이 웃는 얼굴</a></li>
-  <li> <a href="2.html">지연이 정색 얼굴</a></li>
-  <li> <a href="3.html">지연이 브이하는 얼굴</a></li>
-</ul>
-<h2><strong><u><a href="https://www.google.com/search?q=%EA%BD%83&rlz=1C1NDCM_koKR695KR696&sxsrf=ALeKk024M7JHignzaRJ8oJKUvBW_GUYX9w:1599544670208&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiQw_qe8NjrAhXkxosBHW1YCWoQ_AUoAXoECA4QAw" target="_blank" title="지연이 닮은 꼴?">
-  지연이</u></strong>얼굴에 관하여</a></h2>
-<br>
-<br>
-<h2>지연이의 <strong>브이하는</strong> 얼굴</h2>
-<br>
-<br>
-<p><img src="브이지연1.jpg" width="450">
-<br>목화솜 앞에서 브이 지연
-<br>
-<br>
-<br><img src="브이지연2.jpg" width="450">
-<br>시스루뱅하고 브이 지연
-<br>
-<br>
-<br><img src="브이지연3.jpg" width="450">
-<br>가고 싶어했던 나이아가라 앞에서 브이 지연</p>
+
+  <h1><a href="index.html">JIYEON'S FACIAL EXPRESSION</a></h1>
+
+  <div id="grid">
+
+  <div id=hi>
+
+    <ol>
+
+      <li> <a href="1.html">지연이 웃는 얼굴</a></li>
+
+      <li> <a href="2.html">지연이 정색 얼굴</a></li>
+
+      <li> <a href="3.html" style="color:orange; text-decoration: underline">지연이 브이하는 얼굴</a></li>
+
+    </ol>
+
+ </div>
+
+     <div id="article">
+
+        <h2>지연이의 <strong>브이하는</strong> 얼굴</h2>
+
+        <br>
+
+        <br>
+
+        <img src="브이지연1.jpg" width="450">
+
+        <br> 목화솜 앞에서 브이 지연
+        <br>
+
+        <br>
+
+        <br><img src="브이지연2.jpg" width="450">
+
+        <br> 시스루 뱅하고 브이 지연
+
+        <br>
+
+        <br>
+
+        <br><img src="브이지연3.jpg" width="450">
+
+        <br>가고 싶었던 나이아가라 폭포에서 브이 지연
+
+         <p>
+
+        <br>
+
+        <br>
+
+        </p>
+
+      </div>
+
+ </div>
+
+
+
 </body>
+
 </html>
