--- a/index.html
+++ b/index.html
@@ -3,16 +3,40 @@
 <head>
   <title>welcome</title>
 <meta charset="utf-8">
+<style>
+ a {
+   color:black;
+   text-decoration: none;
+ }
+ h1 {
+   font-family:  fantasy; font-size: 300%; text-align: center;
+ }
+ h1{
+   border-width:5px;
+   border-color:black;
+   border-style: solid;
+   padding:20px;
+ }
+
+</style>
 </head>
 <body>
-  <h1><a href="index.html">지연이의 다양한 얼굴</a></h1></a>
+  <h1><a href="index.html">JIYEON'S FACIAL EXPRESSION</a></h1></a>
+  <h2><strong><a href="https://www.google.com/search?q=%EA%BD%83&rlz=1C1NDCM_koKR695KR696&sxsrf=ALeKk024M7JHignzaRJ8oJKUvBW_GUYX9w:1599544670208&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiQw_qe8NjrAhXkxosBHW1YCWoQ_AUoAXoECA4QAw" target="_blank" title="지연이 닮은 꼴?">
+    지연이</strong>얼굴에 관하여</a></h2>
 <ol>
   <li> <a href="1.html">지연이 웃는 얼굴</a></li>
-  <li> <a href="2.html">지연이 정색 얼굴</a></li>
+  <li> <a href="2.html" >지연이 정색 얼굴</a></li>
   <li> <a href="3.html">지연이 브이하는 얼굴</a></li>
-</ul>
-<h2><strong><u><a href="https://www.google.com/search?q=%EA%BD%83&rlz=1C1NDCM_koKR695KR696&sxsrf=ALeKk024M7JHignzaRJ8oJKUvBW_GUYX9w:1599544670208&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiQw_qe8NjrAhXkxosBHW1YCWoQ_AUoAXoECA4QAw" target="_blank" title="지연이 닮은 꼴?">
-  지연이</u></strong>얼굴에 관하여</a></h2>
+</ol>
+<!--
+<ol>
+  <li> <a href="1.html"><font color="black">지연이 웃는 얼굴</a></li>
+  <li> <a href="2.html"><font color="black">지연이 정색 얼굴</a></li>
+  <li> <a href="3.html"><font color="black">지연이 브이하는 얼굴</a></li>
+</ol>
+-->
+
 <h2>지연이의 <strong>귀여운</strong> 얼굴</h2>
 <img src="지연메인.jpg" width="450">
 <br>^.^
